fix double miss, add new border and body-wrapp

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 /* min-width: 1260px, min-height: 680px; */
+html, body{
+    height: 100%;
+}
 body {
-    /*background: #212733;*/
     background: url("../img/bg-all.png") no-repeat;
     background-size: cover;
     margin: 0px;
@@ -10,8 +12,6 @@ body {
     /*background: #ccc;*/
 }
 #area_game {
-    /*width: 1004px;*/
-    /*height: 1075px;*/
     height: auto;
     margin: auto;
     padding: 0px;
@@ -44,18 +44,16 @@ body {
     display: block;
     padding: 0 15px;
 }
-/*#area_game__table {
-    left: 173px;
-    top: 98px;
-}*/
 #area_game__table > tbody > tr > td {
     width: 118px;
     height: 118px;
     cursor: pointer;
     background: url("../img/border.png") repeat center;
+    border: 1px solid #fff;
 }
 #area_game__table > tbody > tr > td:first-child{
     background: none;
+    border: none;
 }
 #area_game__table > thead > tr > td > p,
 #area_game__table > tbody > tr > td > p {
@@ -63,11 +61,6 @@ body {
     font-size: 30px;
     text-align: center;
 }
-/*#area_game__table > tbody > tr > td:not(:nth-child(1)):hover::after {
-    content: attr(data-title);
-    padding-left: 48px;
-    color: rgba(135, 204, 255, 0.72);
-}*/
 #area_game__form {
     margin: 0px;
     padding: 7px;
@@ -117,11 +110,11 @@ body {
     transition: 0.5s;
 }
 
-#body-wrapp{
+.body-wrapp{
     width: 100%;
     height: 100%;
     position: absolute;
-    background: rgba(0,0,0, .3);
+    background: rgba(0,0,0, .6);
     z-index: 9999999;
     display: flex;
     justify-content: center;
@@ -137,7 +130,8 @@ body {
 
 .middle-block p{
     font-size: 22px;
-
+    max-width: 1000px;
+    padding: 0 15px;
 }
 
 .button{
